--- a/package.json
+++ b/package.json
@@ -8,8 +8,20 @@
     "start": "next start"
   },
   "dependencies": {
+    "@react-hook/media-query": "^1.1.1",
+    "@reduxjs/toolkit": "^1.5.1",
+    "@tailwindcss/line-clamp": "^0.2.0",
     "next": "10.2.2",
+    "next-pwa": "^5.2.21",
+    "next-themes": "^0.0.14",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
+    "react-redux": "^7.2.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.2.5",
+    "postcss": "^8.3.0",
+    "tailwindcss": "^2.1.2"
   }
 }
