--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "autoprefixer": "^10.2.5",
     "postcss": "^8.3.0",
+    "tailwind-scrollbar": "^1.3.0",
     "tailwindcss": "^2.1.2"
   }
 }
