--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
-    "react-redux": "^7.2.4"
+    "react-redux": "^7.2.4",
+    "socket.io-client": "^4.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
