--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "@tailwindcss/line-clamp": "^0.2.0",
     "moment": "^2.29.1",
     "next": "10.2.2",
+    "next-auth": "^3.24.0",
     "next-pwa": "^5.2.21",
     "next-themes": "^0.0.14",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.4",
+    "react-spinners": "^0.11.0",
     "socket.io-client": "^4.1.2"
   },
   "devDependencies": {
+    "@emotion/babel-plugin": "^11.3.0",
     "autoprefixer": "^10.2.5",
     "postcss": "^8.3.0",
     "tailwind-scrollbar": "^1.3.0",
