--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-hook/media-query": "^1.1.1",
     "@reduxjs/toolkit": "^1.5.1",
     "@tailwindcss/line-clamp": "^0.2.0",
+    "base-64": "^1.0.0",
     "moment": "^2.29.1",
     "next": "10.2.2",
     "next-auth": "^3.24.0",
