--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.4",
     "react-spinners": "^0.11.0",
+    "react-toastify": "^7.0.4",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0",
     "socket.io-client": "^4.1.2"
   },
   "devDependencies": {
