--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/line-clamp": "^0.2.0",
     "base-64": "^1.0.0",
     "moment": "^2.29.1",
+    "nanoid": "^3.1.23",
     "next": "10.2.2",
     "next-auth": "^3.24.0",
     "next-pwa": "^5.2.21",
@@ -20,6 +21,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "react-modal": "^3.14.2",
     "react-redux": "^7.2.4",
     "react-spinners": "^0.11.0",
     "react-toastify": "^7.0.4",
