--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^1.5.1",
     "@tailwindcss/line-clamp": "^0.2.0",
     "base-64": "^1.0.0",
+    "hark": "^1.2.3",
     "moment": "^2.29.1",
     "nanoid": "^3.1.23",
     "next": "10.2.2",
@@ -25,6 +26,8 @@
     "react-redux": "^7.2.4",
     "react-spinners": "^0.11.0",
     "react-toastify": "^7.0.4",
+    "react-tooltip": "^4.2.21",
+    "react-transition-group": "^4.4.2",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
