--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^1.5.1",
     "@tailwindcss/line-clamp": "^0.2.0",
     "base-64": "^1.0.0",
+    "emoji-mart": "^3.0.1",
     "hark": "^1.2.3",
     "moment": "^2.29.1",
     "nanoid": "^3.1.23",
@@ -19,6 +20,7 @@
     "next-auth": "^3.24.0",
     "next-pwa": "^5.2.21",
     "next-themes": "^0.0.14",
+    "peerjs": "^1.3.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
@@ -31,7 +33,8 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
-    "socket.io-client": "^4.1.2"
+    "socket.io-client": "^4.1.2",
+    "use-resize-observer": "^7.0.0"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.3.0",
