--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "@react-hook/media-query": "^1.1.1",
     "@reduxjs/toolkit": "^1.5.1",
     "@tailwindcss/line-clamp": "^0.2.0",
+    "axios": "^1.4.0",
     "base-64": "^1.0.0",
     "emoji-mart": "^3.0.1",
     "hark": "^1.2.3",
     "moment": "^2.29.1",
     "nanoid": "^3.1.23",
     "next": "10.2.2",
-    "next-auth": "^3.24.0",
+    "next-auth": "^3.29.10",
     "next-pwa": "^5.2.21",
     "next-themes": "^0.0.14",
     "peerjs": "^1.3.2",
