--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
     "postcss": "^8.3.0",
     "tailwind-scrollbar": "^1.3.0",
     "tailwindcss": "^2.1.2"
+  },
+  "engines": {
+    "node": "18.x.x"
   }
 }
